docs-ref-autogen/virtualnetwork/NetworkInterfaces/NetworkInterfaces_ListEffectiveNetworkSecurityGroups.json
{
  "swagger": "2.0",
  "info": {
    "version": "2017-09-01",
    "title": "NetworkManagementClient",
    "description": "The Microsoft Azure Network management API provides a RESTful set of web services that interact with Microsoft Azure Networks service to manage your network resources. The API has entities that capture the relationship between an end user and the Microsoft Azure Networks service."
  },
  "host": "management.azure.com",
  "schemes": [
    "https"
  ],
  "security": [
    {
      "azure_auth": [
        "user_impersonation"
      ]
    }
  ],
  "securityDefinitions": {
    "azure_auth": {
      "type": "oauth2",
      "authorizationUrl": "https://login.microsoftonline.com/common/oauth2/authorize",
      "flow": "implicit",
      "description": "Azure Active Directory OAuth2 Flow",
      "scopes": {
        "user_impersonation": "impersonate your user account"
      }
    }
  },
  "paths": {
    "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.Network/networkInterfaces/{networkInterfaceName}/effectiveNetworkSecurityGroups": {
      "post": {
        "tags": [
          "NetworkInterfaces"
        ],
        "operationId": "NetworkInterfaces_ListEffectiveNetworkSecurityGroups",
        "description": "Gets all network security groups applied to a network interface.",
        "parameters": [
          {
            "name": "resourceGroupName",
            "in": "path",
            "required": true,
            "type": "string",
            "description": "The name of the resource group."
          },
          {
            "name": "networkInterfaceName",
            "in": "path",
            "required": true,
            "type": "string",
            "description": "The name of the network interface."
          },
          {
            "$ref": "#/parameters/ApiVersionParameter"
          },
          {
            "$ref": "#/parameters/SubscriptionIdParameter"
          }
        ],
        "responses": {
          "200": {
            "description": "Request successful. The operation returns a list of NetworkSecurityGroup resources.",
            "schema": {
              "$ref": "#/definitions/EffectiveNetworkSecurityGroupListResult"
            }
          },
          "202": {
            "description": "Accepted and the operation will complete asynchronously."
          }
        },
        "x-ms-examples": {
          "List network interface effective network security groups": {
            "parameters": {
              "api-version": "2017-09-01",
              "subscriptionId": "subid",
              "resourceGroupName": "rg1",
              "networkInterfaceName": "nic1"
            },
            "responses": {
              "200": {
                "body": {
                  "value": [
                    {
                      "networkSecurityGroup": {
                        "id": "/subscriptions/subid/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/test-nsg"
                      },
                      "association": {
                        "subnet": {
                          "id": "/subscriptions/subid/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/rg1-vnet/subnets/default"
                        },
                        "networkInterface": {
                          "id": "/subscriptions/subid/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic1"
                        }
                      },
                      "effectiveSecurityRules": [
                        {
                          "name": "securityRules/rule1",
                          "protocol": "Tcp",
                          "sourcePortRange": "456-456",
                          "destinationPortRange": "6579-6579",
                          "sourceAddressPrefix": "0.0.0.0/32",
                          "destinationAddressPrefix": "0.0.0.0/32",
                          "access": "Allow",
                          "priority": 234,
                          "direction": "Inbound"
                        },
                        {
                          "name": "securityRules/default-allow-rdp",
                          "protocol": "Tcp",
                          "sourcePortRange": "0-65535",
                          "destinationPortRange": "3389-3389",
                          "sourceAddressPrefix": "1.1.1.1/32",
                          "destinationAddressPrefix": "0.0.0.0/0",
                          "access": "Allow",
                          "priority": 1000,
                          "direction": "Inbound"
                        },
                        {
                          "name": "defaultSecurityRules/AllowInternetOutBound",
                          "protocol": "All",
                          "sourcePortRange": "0-65535",
                          "destinationPortRange": "0-65535",
                          "sourceAddressPrefix": "0.0.0.0/0",
                          "destinationAddressPrefix": "Internet",
                          "expandedDestinationAddressPrefix": [
                            "32.0.0.0/3",
                            "4.0.0.0/6",
                            "2.0.0.0/7",
                            "1.0.0.0/8"
                          ],
                          "access": "Allow",
                          "priority": 65001,
                          "direction": "Outbound"
                        }
                      ]
                    }
                  ]
                }
              },
              "202": {}
            }
          }
        },
        "x-ms-long-running-operation": true,
        "produces": [
          "application/json",
          "text/json"
        ],
        "consumes": [
          "application/json",
          "text/json"
        ],
        "x-internal-toc-name": "NetworkInterfaces_ListEffectiveNetworkSecurityGroups"
      }
    }
  },
  "definitions": {
    "NetworkInterfaceIPConfigurationPropertiesFormat": {
      "properties": {
        "applicationGatewayBackendAddressPools": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubResource"
          },
          "description": "The reference of ApplicationGatewayBackendAddressPool resource."
        },
        "loadBalancerBackendAddressPools": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubResource"
          },
          "description": "The reference of LoadBalancerBackendAddressPool resource."
        },
        "loadBalancerInboundNatRules": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubResource"
          },
          "description": "A list of references of LoadBalancerInboundNatRules."
        },
        "privateIPAddress": {
          "type": "string",
          "description": "Private IP address of the IP configuration."
        },
        "privateIPAllocationMethod": {
          "type": "string",
          "description": "Defines how a private IP address is assigned. Possible values are: 'Static' and 'Dynamic'.",
          "enum": [
            "Static",
            "Dynamic"
          ],
          "x-ms-enum": {
            "name": "IPAllocationMethod",
            "modelAsString": false
          }
        },
        "privateIPAddressVersion": {
          "type": "string",
          "description": "Available from Api-Version 2016-03-30 onwards, it represents whether the specific ipconfiguration is IPv4 or IPv6. Default is taken as IPv4.  Possible values are: 'IPv4' and 'IPv6'.",
          "enum": [
            "IPv4",
            "IPv6"
          ],
          "x-ms-enum": {
            "name": "IPVersion",
            "modelAsString": false
          }
        },
        "subnet": {
          "$ref": "#/definitions/SubResource",
          "description": "Subnet bound to the IP configuration."
        },
        "primary": {
          "type": "boolean",
          "description": "Gets whether this is a primary customer address on the network interface."
        },
        "publicIPAddress": {
          "$ref": "#/definitions/SubResource",
          "description": "Public IP address bound to the IP configuration."
        },
        "applicationSecurityGroups": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubResource"
          },
          "description": "Application security groups in which the IP configuration is included."
        },
        "provisioningState": {
          "type": "string",
          "description": "The provisioning state of the network interface IP configuration. Possible values are: 'Updating', 'Deleting', and 'Failed'."
        }
      },
      "description": "Properties of IP configuration."
    },
    "NetworkInterfaceIPConfiguration": {
      "properties": {
        "properties": {
          "x-ms-client-flatten": true,
          "$ref": "#/definitions/NetworkInterfaceIPConfigurationPropertiesFormat",
          "description": "Network interface IP configuration properties."
        },
        "name": {
          "type": "string",
          "description": "The name of the resource that is unique within a resource group. This name can be used to access the resource."
        },
        "etag": {
          "type": "string",
          "description": "A unique read-only string that changes whenever the resource is updated."
        }
      },
      "allOf": [
        {
          "$ref": "#/definitions/SubResourceReadOnly"
        }
      ],
      "description": "IPConfiguration in a network interface.",
      "required": [
        "name"
      ]
    },
    "NetworkInterfaceDnsSettings": {
      "properties": {
        "dnsServers": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "List of DNS servers IP addresses. Use 'AzureProvidedDNS' to switch to azure provided DNS resolution. 'AzureProvidedDNS' value cannot be combined with other IPs, it must be the only value in dnsServers collection."
        },
        "appliedDnsServers": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "If the VM that uses this NIC is part of an Availability Set, then this list will have the union of all DNS servers from all NICs that are part of the Availability Set. This property is what is configured on each of those VMs."
        },
        "internalDnsNameLabel": {
          "type": "string",
          "description": "Relative DNS name for this NIC used for internal communications between VMs in the same virtual network."
        },
        "internalFqdn": {
          "type": "string",
          "description": "Fully qualified DNS name supporting internal communications between VMs in the same virtual network."
        },
        "internalDomainNameSuffix": {
          "type": "string",
          "description": "Even if internalDnsNameLabel is not specified, a DNS entry is created for the primary NIC of the VM. This DNS name can be constructed by concatenating the VM name with the value of internalDomainNameSuffix."
        }
      },
      "description": "DNS settings of a network interface."
    },
    "NetworkInterfacePropertiesFormat": {
      "properties": {
        "virtualMachine": {
          "$ref": "#/definitions/SubResource",
          "description": "The reference of a virtual machine."
        },
        "networkSecurityGroup": {
          "$ref": "#/definitions/SubResource",
          "description": "The reference of the NetworkSecurityGroup resource."
        },
        "ipConfigurations": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/NetworkInterfaceIPConfiguration"
          },
          "description": "A list of IPConfigurations of the network interface."
        },
        "dnsSettings": {
          "$ref": "#/definitions/NetworkInterfaceDnsSettings",
          "description": "The DNS settings in network interface."
        },
        "macAddress": {
          "type": "string",
          "description": "The MAC address of the network interface."
        },
        "primary": {
          "type": "boolean",
          "description": "Gets whether this is a primary network interface on a virtual machine."
        },
        "enableAcceleratedNetworking": {
          "type": "boolean",
          "description": "If the network interface is accelerated networking enabled."
        },
        "enableIPForwarding": {
          "type": "boolean",
          "description": "Indicates whether IP forwarding is enabled on this network interface."
        },
        "resourceGuid": {
          "type": "string",
          "description": "The resource GUID property of the network interface resource."
        },
        "provisioningState": {
          "type": "string",
          "description": "The provisioning state of the public IP resource. Possible values are: 'Updating', 'Deleting', and 'Failed'."
        }
      },
      "description": "NetworkInterface properties. ",
      "required": [
        "ipConfigurations"
      ]
    },
    "NetworkInterface": {
      "properties": {
        "properties": {
          "x-ms-client-flatten": true,
          "$ref": "#/definitions/NetworkInterfacePropertiesFormat",
          "description": "Properties of the network interface."
        },
        "etag": {
          "type": "string",
          "description": "A unique read-only string that changes whenever the resource is updated."
        }
      },
      "allOf": [
        {
          "$ref": "#/definitions/Resource"
        }
      ],
      "description": "A network interface in a resource group."
    },
    "NetworkInterfaceListResult": {
      "properties": {
        "value": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/NetworkInterface"
          },
          "description": "A list of network interfaces in a resource group."
        },
        "nextLink": {
          "readOnly": true,
          "type": "string",
          "description": "The URL to get the next set of results."
        }
      },
      "description": "Response for the ListNetworkInterface API service call."
    },
    "NetworkInterfaceIPConfigurationListResult": {
      "properties": {
        "value": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/NetworkInterfaceIPConfiguration"
          },
          "description": "A list of ip configurations."
        },
        "nextLink": {
          "readOnly": true,
          "type": "string",
          "description": "The URL to get the next set of results."
        }
      },
      "description": "Response for list ip configurations API service call."
    },
    "NetworkInterfaceLoadBalancerListResult": {
      "properties": {
        "value": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/LoadBalancer"
          },
          "description": "A list of load balancers."
        },
        "nextLink": {
          "readOnly": true,
          "type": "string",
          "description": "The URL to get the next set of results."
        }
      },
      "description": "Response for list ip configurations API service call."
    },
    "EffectiveNetworkSecurityGroup": {
      "properties": {
        "networkSecurityGroup": {
          "$ref": "#/definitions/SubResource",
          "description": "The ID of network security group that is applied."
        },
        "association": {
          "$ref": "#/definitions/EffectiveNetworkSecurityGroupAssociation",
          "description": "Associated resources."
        },
        "effectiveSecurityRules": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/EffectiveNetworkSecurityRule"
          },
          "description": "A collection of effective security rules."
        },
        "tagMap": {
          "type": "string",
          "additionalProperties": {
            "type": "array",
            "items": {
              "type": "string"
            },
            "description": "List of IP Addresses within the tag (key)"
          },
          "description": "Mapping of tags to list of IP Addresses included within the tag."
        }
      },
      "description": "Effective network security group."
    },
    "EffectiveNetworkSecurityGroupAssociation": {
      "properties": {
        "subnet": {
          "$ref": "#/definitions/SubResource",
          "description": "The ID of the subnet if assigned."
        },
        "networkInterface": {
          "$ref": "#/definitions/SubResource",
          "description": "The ID of the network interface if assigned."
        }
      },
      "description": "The effective network security group association."
    },
    "EffectiveNetworkSecurityRule": {
      "properties": {
        "name": {
          "type": "string",
          "description": "The name of the security rule specified by the user (if created by the user)."
        },
        "protocol": {
          "type": "string",
          "description": "The network protocol this rule applies to. Possible values are: 'Tcp', 'Udp', and 'All'.",
          "enum": [
            "Tcp",
            "Udp",
            "All"
          ],
          "x-ms-enum": {
            "name": "EffectiveSecurityRuleProtocol",
            "modelAsString": false
          }
        },
        "sourcePortRange": {
          "type": "string",
          "description": "The source port or range."
        },
        "destinationPortRange": {
          "type": "string",
          "description": "The destination port or range."
        },
        "sourcePortRanges": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "The source port ranges. Expected values include a single integer between 0 and 65535, a range using '-' as seperator (e.g. 100-400), or an asterix (*)"
        },
        "destinationPortRanges": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "The destination port ranges. Expected values include a single integer between 0 and 65535, a range using '-' as seperator (e.g. 100-400), or an asterix (*)"
        },
        "sourceAddressPrefix": {
          "type": "string",
          "description": "The source address prefix."
        },
        "destinationAddressPrefix": {
          "type": "string",
          "description": "The destination address prefix."
        },
        "sourceAddressPrefixes": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "The source address prefixes. Expected values include CIDR IP ranges, Default Tags (VirtualNetwork, AureLoadBalancer, Internet), System Tags, and the asterix (*)."
        },
        "destinationAddressPrefixes": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "The destination address prefixes. Expected values include CIDR IP ranges, Default Tags (VirtualNetwork, AureLoadBalancer, Internet), System Tags, and the asterix (*)."
        },
        "expandedSourceAddressPrefix": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "The expanded source address prefix."
        },
        "expandedDestinationAddressPrefix": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "Expanded destination address prefix."
        },
        "access": {
          "type": "string",
          "description": "Whether network traffic is allowed or denied. Possible values are: 'Allow' and 'Deny'.",
          "enum": [
            "Allow",
            "Deny"
          ],
          "x-ms-enum": {
            "name": "SecurityRuleAccess",
            "modelAsString": false
          }
        },
        "priority": {
          "type": "integer",
          "format": "int32",
          "description": "The priority of the rule."
        },
        "direction": {
          "type": "string",
          "description": "The direction of the rule. Possible values are: 'Inbound and Outbound'.",
          "enum": [
            "Inbound",
            "Outbound"
          ],
          "x-ms-enum": {
            "name": "SecurityRuleDirection",
            "modelAsString": false
          }
        }
      },
      "description": "Effective network security rules."
    },
    "EffectiveNetworkSecurityGroupListResult": {
      "properties": {
        "value": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/EffectiveNetworkSecurityGroup"
          },
          "description": "A list of effective network security groups."
        },
        "nextLink": {
          "readOnly": true,
          "type": "string",
          "description": "The URL to get the next set of results."
        }
      },
      "description": "Response for list effective network security groups API service call."
    },
    "EffectiveRoute": {
      "properties": {
        "name": {
          "type": "string",
          "description": "The name of the user defined route. This is optional."
        },
        "source": {
          "type": "string",
          "description": "Who created the route. Possible values are: 'Unknown', 'User', 'VirtualNetworkGateway', and 'Default'.",
          "enum": [
            "Unknown",
            "User",
            "VirtualNetworkGateway",
            "Default"
          ],
          "x-ms-enum": {
            "name": "EffectiveRouteSource",
            "modelAsString": false
          }
        },
        "state": {
          "type": "string",
          "description": "The value of effective route. Possible values are: 'Active' and 'Invalid'.",
          "enum": [
            "Active",
            "Invalid"
          ],
          "x-ms-enum": {
            "name": "EffectiveRouteState",
            "modelAsString": false
          }
        },
        "addressPrefix": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "The address prefixes of the effective routes in CIDR notation."
        },
        "nextHopIpAddress": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "The IP address of the next hop of the effective route."
        },
        "nextHopType": {
          "type": "string",
          "description": "The type of Azure hop the packet should be sent to. Possible values are: 'VirtualNetworkGateway', 'VnetLocal', 'Internet', 'VirtualAppliance', and 'None'.",
          "enum": [
            "VirtualNetworkGateway",
            "VnetLocal",
            "Internet",
            "VirtualAppliance",
            "None"
          ],
          "x-ms-enum": {
            "name": "RouteNextHopType",
            "modelAsString": false
          }
        }
      },
      "description": "Effective Route"
    },
    "EffectiveRouteListResult": {
      "properties": {
        "value": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/EffectiveRoute"
          },
          "description": "A list of effective routes."
        },
        "nextLink": {
          "readOnly": true,
          "type": "string",
          "description": "The URL to get the next set of results."
        }
      },
      "description": "Response for list effective route API service call."
    },
    "IPConfigurationPropertiesFormat": {
      "properties": {
        "privateIPAddress": {
          "type": "string",
          "description": "The private IP address of the IP configuration."
        },
        "privateIPAllocationMethod": {
          "type": "string",
          "description": "The private IP allocation method. Possible values are 'Static' and 'Dynamic'.",
          "enum": [
            "Static",
            "Dynamic"
          ],
          "x-ms-enum": {
            "name": "IPAllocationMethod",
            "modelAsString": false
          }
        },
        "subnet": {
          "$ref": "#/definitions/SubResource",
          "description": "The reference of the subnet resource."
        },
        "publicIPAddress": {
          "$ref": "#/definitions/SubResource",
          "description": "The reference of the public IP resource."
        },
        "provisioningState": {
          "type": "string",
          "description": "Gets the provisioning state of the public IP resource. Possible values are: 'Updating', 'Deleting', and 'Failed'."
        }
      },
      "description": "Properties of IP configuration."
    },
    "IPConfiguration": {
      "properties": {
        "properties": {
          "x-ms-client-flatten": true,
          "$ref": "#/definitions/IPConfigurationPropertiesFormat",
          "description": "Properties of the IP configuration"
        },
        "name": {
          "type": "string",
          "description": "The name of the resource that is unique within a resource group. This name can be used to access the resource."
        },
        "etag": {
          "type": "string",
          "description": "A unique read-only string that changes whenever the resource is updated."
        }
      },
      "allOf": [
        {
          "$ref": "#/definitions/SubResourceReadOnly"
        }
      ],
      "description": "IP configuration"
    },
    "SubResourceReadOnly": {
      "properties": {
        "id": {
          "readOnly": true,
          "description": "Resource ID",
          "type": "string"
        }
      },
      "x-ms-azure-resource": true
    },
    "SubResource": {
      "properties": {
        "id": {
          "type": "string",
          "description": "Resource ID."
        }
      },
      "description": "Reference to another subresource.",
      "x-ms-azure-resource": true,
      "required": [
        "id"
      ]
    },
    "OutboundNatRulePropertiesFormat": {
      "properties": {
        "allocatedOutboundPorts": {
          "type": "integer",
          "format": "int32",
          "description": "The number of outbound ports to be used for NAT."
        },
        "frontendIPConfigurations": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubResource"
          },
          "description": "The Frontend IP addresses of the load balancer."
        },
        "backendAddressPool": {
          "$ref": "#/definitions/SubResource",
          "description": "A reference to a pool of DIPs. Outbound traffic is randomly load balanced across IPs in the backend IPs."
        },
        "provisioningState": {
          "type": "string",
          "description": "Gets the provisioning state of the PublicIP resource. Possible values are: 'Updating', 'Deleting', and 'Failed'."
        }
      },
      "required": [
        "backendAddressPool"
      ],
      "description": "Outbound NAT pool of the load balancer."
    },
    "OutboundNatRule": {
      "properties": {
        "properties": {
          "x-ms-client-flatten": true,
          "$ref": "#/definitions/OutboundNatRulePropertiesFormat",
          "description": "Properties of load balancer outbound nat rule."
        },
        "name": {
          "type": "string",
          "description": "The name of the resource that is unique within a resource group. This name can be used to access the resource."
        },
        "etag": {
          "type": "string",
          "description": "A unique read-only string that changes whenever the resource is updated."
        }
      },
      "allOf": [
        {
          "$ref": "#/definitions/SubResourceReadOnly"
        }
      ],
      "description": "Outbound NAT pool of the load balancer."
    },
    "TransportProtocol": {
      "type": "string",
      "description": "The transport protocol for the endpoint. Possible values are 'Udp' or 'Tcp' or 'All.'",
      "enum": [
        "Udp",
        "Tcp",
        "All"
      ],
      "x-ms-enum": {
        "name": "TransportProtocol",
        "modelAsString": false
      }
    },
    "InboundNatPoolPropertiesFormat": {
      "properties": {
        "frontendIPConfiguration": {
          "$ref": "#/definitions/SubResource",
          "description": "A reference to frontend IP addresses."
        },
        "protocol": {
          "$ref": "#/definitions/TransportProtocol"
        },
        "frontendPortRangeStart": {
          "type": "integer",
          "format": "int32",
          "description": "The first port number in the range of external ports that will be used to provide Inbound Nat to NICs associated with a load balancer. Acceptable values range between 1 and 65534."
        },
        "frontendPortRangeEnd": {
          "type": "integer",
          "format": "int32",
          "description": "The last port number in the range of external ports that will be used to provide Inbound Nat to NICs associated with a load balancer. Acceptable values range between 1 and 65535."
        },
        "backendPort": {
          "type": "integer",
          "format": "int32",
          "description": "The port used for internal connections on the endpoint. Acceptable values are between 1 and 65535."
        },
        "provisioningState": {
          "type": "string",
          "description": "Gets the provisioning state of the PublicIP resource. Possible values are: 'Updating', 'Deleting', and 'Failed'."
        }
      },
      "description": "Properties of Inbound NAT pool.",
      "required": [
        "frontendIPConfiguration",
        "protocol",
        "frontendPortRangeStart",
        "frontendPortRangeEnd",
        "backendPort"
      ]
    },
    "InboundNatPool": {
      "properties": {
        "properties": {
          "x-ms-client-flatten": true,
          "$ref": "#/definitions/InboundNatPoolPropertiesFormat",
          "description": "Properties of load balancer inbound nat pool."
        },
        "name": {
          "type": "string",
          "description": "The name of the resource that is unique within a resource group. This name can be used to access the resource."
        },
        "etag": {
          "type": "string",
          "description": "A unique read-only string that changes whenever the resource is updated."
        }
      },
      "allOf": [
        {
          "$ref": "#/definitions/SubResourceReadOnly"
        }
      ],
      "description": "Inbound NAT pool of the load balancer.",
      "required": [
        "name"
      ]
    },
    "InboundNatRulePropertiesFormat": {
      "properties": {
        "frontendIPConfiguration": {
          "$ref": "#/definitions/SubResource",
          "description": "A reference to frontend IP addresses."
        },
        "backendIPConfiguration": {
          "readOnly": true,
          "$ref": "#/definitions/SubResource",
          "description": "A reference to a private IP address defined on a network interface of a VM. Traffic sent to the frontend port of each of the frontend IP configurations is forwarded to the backend IP."
        },
        "protocol": {
          "$ref": "#/definitions/TransportProtocol"
        },
        "frontendPort": {
          "type": "integer",
          "format": "int32",
          "description": "The port for the external endpoint. Port numbers for each rule must be unique within the Load Balancer. Acceptable values range from 1 to 65534."
        },
        "backendPort": {
          "type": "integer",
          "format": "int32",
          "description": "The port used for the internal endpoint. Acceptable values range from 1 to 65535."
        },
        "idleTimeoutInMinutes": {
          "type": "integer",
          "format": "int32",
          "description": "The timeout for the TCP idle connection. The value can be set between 4 and 30 minutes. The default value is 4 minutes. This element is only used when the protocol is set to TCP."
        },
        "enableFloatingIP": {
          "type": "boolean",
          "description": "Configures a virtual machine's endpoint for the floating IP capability required to configure a SQL AlwaysOn Availability Group. This setting is required when using the SQL AlwaysOn Availability Groups in SQL server. This setting can't be changed after you create the endpoint."
        },
        "provisioningState": {
          "type": "string",
          "description": "Gets the provisioning state of the public IP resource. Possible values are: 'Updating', 'Deleting', and 'Failed'."
        }
      },
      "description": "Properties of the inbound NAT rule.",
      "required": [
        "frontendIPConfiguration",
        "protocol",
        "frontendPort",
        "backendPort"
      ]
    },
    "InboundNatRule": {
      "properties": {
        "properties": {
          "x-ms-client-flatten": true,
          "$ref": "#/definitions/InboundNatRulePropertiesFormat",
          "description": "Properties of load balancer inbound nat rule."
        },
        "name": {
          "type": "string",
          "description": "Gets name of the resource that is unique within a resource group. This name can be used to access the resource."
        },
        "etag": {
          "type": "string",
          "description": "A unique read-only string that changes whenever the resource is updated."
        }
      },
      "allOf": [
        {
          "$ref": "#/definitions/SubResourceReadOnly"
        }
      ],
      "description": "Inbound NAT rule of the load balancer.",
      "required": [
        "name"
      ]
    },
    "ProbePropertiesFormat": {
      "properties": {
        "loadBalancingRules": {
          "readOnly": true,
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubResource"
          },
          "description": "The load balancer rules that use this probe."
        },
        "protocol": {
          "type": "string",
          "description": "The protocol of the end point. Possible values are: 'Http' or 'Tcp'. If 'Tcp' is specified, a received ACK is required for the probe to be successful. If 'Http' is specified, a 200 OK response from the specifies URI is required for the probe to be successful.",
          "enum": [
            "Http",
            "Tcp"
          ],
          "x-ms-enum": {
            "name": "ProbeProtocol",
            "modelAsString": false
          }
        },
        "port": {
          "type": "integer",
          "format": "int32",
          "description": "The port for communicating the probe. Possible values range from 1 to 65535, inclusive."
        },
        "intervalInSeconds": {
          "type": "integer",
          "format": "int32",
          "description": "The interval, in seconds, for how frequently to probe the endpoint for health status. Typically, the interval is slightly less than half the allocated timeout period (in seconds) which allows two full probes before taking the instance out of rotation. The default value is 15, the minimum value is 5."
        },
        "numberOfProbes": {
          "type": "integer",
          "format": "int32",
          "description": "The number of probes where if no response, will result in stopping further traffic from being delivered to the endpoint. This values allows endpoints to be taken out of rotation faster or slower than the typical times used in Azure."
        },
        "requestPath": {
          "type": "string",
          "description": "The URI used for requesting health status from the VM. Path is required if a protocol is set to http. Otherwise, it is not allowed. There is no default value."
        },
        "provisioningState": {
          "type": "string",
          "description": "Gets the provisioning state of the public IP resource. Possible values are: 'Updating', 'Deleting', and 'Failed'."
        }
      },
      "description": "Load balancer probe resource.",
      "required": [
        "protocol",
        "port",
        "numberOfProbes"
      ]
    },
    "Probe": {
      "properties": {
        "properties": {
          "x-ms-client-flatten": true,
          "$ref": "#/definitions/ProbePropertiesFormat",
          "description": "Properties of load balancer probe."
        },
        "name": {
          "type": "string",
          "description": "Gets name of the resource that is unique within a resource group. This name can be used to access the resource."
        },
        "etag": {
          "type": "string",
          "description": "A unique read-only string that changes whenever the resource is updated."
        }
      },
      "allOf": [
        {
          "$ref": "#/definitions/SubResourceReadOnly"
        }
      ],
      "description": "A load balancer probe.",
      "required": [
        "name"
      ]
    },
    "LoadBalancingRulePropertiesFormat": {
      "properties": {
        "frontendIPConfiguration": {
          "$ref": "#/definitions/SubResource",
          "description": "A reference to frontend IP addresses."
        },
        "backendAddressPool": {
          "$ref": "#/definitions/SubResource",
          "description": "A reference to a pool of DIPs. Inbound traffic is randomly load balanced across IPs in the backend IPs."
        },
        "probe": {
          "$ref": "#/definitions/SubResource",
          "description": "The reference of the load balancer probe used by the load balancing rule."
        },
        "protocol": {
          "$ref": "#/definitions/TransportProtocol"
        },
        "loadDistribution": {
          "type": "string",
          "description": "The load distribution policy for this rule. Possible values are 'Default', 'SourceIP', and 'SourceIPProtocol'.",
          "enum": [
            "Default",
            "SourceIP",
            "SourceIPProtocol"
          ],
          "x-ms-enum": {
            "name": "LoadDistribution",
            "modelAsString": false
          }
        },
        "frontendPort": {
          "type": "integer",
          "format": "int32",
          "description": "The port for the external endpoint. Port numbers for each rule must be unique within the Load Balancer. Acceptable values are between 0 and 65534. Note that value 0 enables \"Any Port\""
        },
        "backendPort": {
          "type": "integer",
          "format": "int32",
          "description": "The port used for internal connections on the endpoint. Acceptable values are between 0 and 65535. Note that value 0 enables \"Any Port\""
        },
        "idleTimeoutInMinutes": {
          "type": "integer",
          "format": "int32",
          "description": "The timeout for the TCP idle connection. The value can be set between 4 and 30 minutes. The default value is 4 minutes. This element is only used when the protocol is set to TCP."
        },
        "enableFloatingIP": {
          "type": "boolean",
          "description": "Configures a virtual machine's endpoint for the floating IP capability required to configure a SQL AlwaysOn Availability Group. This setting is required when using the SQL AlwaysOn Availability Groups in SQL server. This setting can't be changed after you create the endpoint."
        },
        "disableOutboundSnat": {
          "type": "boolean",
          "description": "Configures SNAT for the VMs in the backend pool to use the publicIP address specified in the frontend of the load balancing rule."
        },
        "provisioningState": {
          "type": "string",
          "description": "Gets the provisioning state of the PublicIP resource. Possible values are: 'Updating', 'Deleting', and 'Failed'."
        }
      },
      "description": "Properties of the load balancer.",
      "required": [
        "frontendIPConfiguration",
        "protocol",
        "frontendPort",
        "backendPort"
      ]
    },
    "LoadBalancingRule": {
      "properties": {
        "properties": {
          "x-ms-client-flatten": true,
          "$ref": "#/definitions/LoadBalancingRulePropertiesFormat",
          "description": "Properties of load balancer load balancing rule."
        },
        "name": {
          "type": "string",
          "description": "The name of the resource that is unique within a resource group. This name can be used to access the resource."
        },
        "etag": {
          "type": "string",
          "description": "A unique read-only string that changes whenever the resource is updated."
        }
      },
      "allOf": [
        {
          "$ref": "#/definitions/SubResourceReadOnly"
        }
      ],
      "description": "A load balancing rule for a load balancer.",
      "required": [
        "name"
      ]
    },
    "BackendAddressPoolPropertiesFormat": {
      "properties": {
        "backendIPConfigurations": {
          "readOnly": true,
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubResource"
          },
          "description": "Gets collection of references to IP addresses defined in network interfaces."
        },
        "loadBalancingRules": {
          "readOnly": true,
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubResource"
          },
          "description": "Gets load balancing rules that use this backend address pool."
        },
        "outboundNatRule": {
          "readOnly": true,
          "$ref": "#/definitions/SubResource",
          "description": "Gets outbound rules that use this backend address pool."
        },
        "provisioningState": {
          "type": "string",
          "description": "Get provisioning state of the public IP resource. Possible values are: 'Updating', 'Deleting', and 'Failed'."
        }
      },
      "description": "Properties of the backend address pool."
    },
    "BackendAddressPool": {
      "properties": {
        "properties": {
          "x-ms-client-flatten": true,
          "$ref": "#/definitions/BackendAddressPoolPropertiesFormat",
          "description": "Properties of load balancer backend address pool."
        },
        "name": {
          "type": "string",
          "description": "Gets name of the resource that is unique within a resource group. This name can be used to access the resource."
        },
        "etag": {
          "type": "string",
          "description": "A unique read-only string that changes whenever the resource is updated."
        }
      },
      "allOf": [
        {
          "$ref": "#/definitions/SubResourceReadOnly"
        }
      ],
      "description": "Pool of backend IP addresses.",
      "required": [
        "name"
      ]
    },
    "FrontendIPConfigurationPropertiesFormat": {
      "properties": {
        "inboundNatRules": {
          "readOnly": true,
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubResource"
          },
          "description": "Read only. Inbound rules URIs that use this frontend IP."
        },
        "inboundNatPools": {
          "readOnly": true,
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubResource"
          },
          "description": "Read only. Inbound pools URIs that use this frontend IP."
        },
        "outboundNatRules": {
          "readOnly": true,
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubResource"
          },
          "description": "Read only. Outbound rules URIs that use this frontend IP."
        },
        "loadBalancingRules": {
          "readOnly": true,
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubResource"
          },
          "description": "Gets load balancing rules URIs that use this frontend IP."
        },
        "privateIPAddress": {
          "type": "string",
          "description": "The private IP address of the IP configuration."
        },
        "privateIPAllocationMethod": {
          "type": "string",
          "description": "The Private IP allocation method. Possible values are: 'Static' and 'Dynamic'.",
          "enum": [
            "Static",
            "Dynamic"
          ],
          "x-ms-enum": {
            "name": "IPAllocationMethod",
            "modelAsString": false
          }
        },
        "subnet": {
          "$ref": "#/definitions/SubResource",
          "description": "The reference of the subnet resource."
        },
        "publicIPAddress": {
          "$ref": "#/definitions/SubResource",
          "description": "The reference of the Public IP resource."
        },
        "provisioningState": {
          "type": "string",
          "description": "Gets the provisioning state of the public IP resource. Possible values are: 'Updating', 'Deleting', and 'Failed'."
        }
      },
      "description": "Properties of Frontend IP Configuration of the load balancer."
    },
    "FrontendIPConfiguration": {
      "properties": {
        "properties": {
          "x-ms-client-flatten": true,
          "$ref": "#/definitions/FrontendIPConfigurationPropertiesFormat",
          "description": "Properties of the load balancer probe."
        },
        "name": {
          "type": "string",
          "description": "The name of the resource that is unique within a resource group. This name can be used to access the resource."
        },
        "etag": {
          "type": "string",
          "description": "A unique read-only string that changes whenever the resource is updated."
        },
        "zones": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "A list of availability zones denoting the IP allocated for the resource needs to come from."
        }
      },
      "allOf": [
        {
          "$ref": "#/definitions/SubResourceReadOnly"
        }
      ],
      "description": "Frontend IP address of the load balancer.",
      "required": [
        "name"
      ]
    },
    "LoadBalancerPropertiesFormat": {
      "properties": {
        "frontendIPConfigurations": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/FrontendIPConfiguration"
          },
          "description": "Object representing the frontend IPs to be used for the load balancer"
        },
        "backendAddressPools": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/BackendAddressPool"
          },
          "description": "Collection of backend address pools used by a load balancer"
        },
        "loadBalancingRules": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/LoadBalancingRule"
          },
          "description": "Object collection representing the load balancing rules Gets the provisioning "
        },
        "probes": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/Probe"
          },
          "description": "Collection of probe objects used in the load balancer"
        },
        "inboundNatRules": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/InboundNatRule"
          },
          "description": "Collection of inbound NAT Rules used by a load balancer. Defining inbound NAT rules on your load balancer is mutually exclusive with defining an inbound NAT pool. Inbound NAT pools are referenced from virtual machine scale sets. NICs that are associated with individual virtual machines cannot reference an Inbound NAT pool. They have to reference individual inbound NAT rules."
        },
        "inboundNatPools": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/InboundNatPool"
          },
          "description": "Defines an external port range for inbound NAT to a single backend port on NICs associated with a load balancer. Inbound NAT rules are created automatically for each NIC associated with the Load Balancer using an external port from this range. Defining an Inbound NAT pool on your Load Balancer is mutually exclusive with defining inbound Nat rules. Inbound NAT pools are referenced from virtual machine scale sets. NICs that are associated with individual virtual machines  [...]
        },
        "outboundNatRules": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/OutboundNatRule"
          },
          "description": "The outbound NAT rules."
        },
        "resourceGuid": {
          "type": "string",
          "description": "The resource GUID property of the load balancer resource."
        },
        "provisioningState": {
          "type": "string",
          "description": "Gets the provisioning state of the PublicIP resource. Possible values are: 'Updating', 'Deleting', and 'Failed'."
        }
      },
      "description": "Properties of the load balancer."
    },
    "LoadBalancerSku": {
      "properties": {
        "name": {
          "type": "string",
          "description": "Name of a load balancer SKU.",
          "enum": [
            "Basic",
            "Standard"
          ],
          "x-ms-enum": {
            "name": "LoadBalancerSkuName",
            "modelAsString": false
          }
        }
      },
      "description": "SKU of a load balancer"
    },
    "LoadBalancer": {
      "properties": {
        "sku": {
          "$ref": "#/definitions/LoadBalancerSku",
          "description": "The load balancer SKU."
        },
        "properties": {
          "x-ms-client-flatten": true,
          "$ref": "#/definitions/LoadBalancerPropertiesFormat",
          "description": "Properties of load balancer."
        },
        "etag": {
          "type": "string",
          "description": "A unique read-only string that changes whenever the resource is updated."
        }
      },
      "allOf": [
        {
          "$ref": "#/definitions/Resource"
        }
      ],
      "description": "LoadBalancer resource"
    },
    "Resource": {
      "properties": {
        "id": {
          "type": "string",
          "description": "Resource ID.",
          "readOnly": true
        },
        "name": {
          "readOnly": true,
          "type": "string",
          "description": "Resource name."
        },
        "type": {
          "readOnly": true,
          "type": "string",
          "description": "Resource type."
        },
        "location": {
          "type": "string",
          "description": "Resource location."
        },
        "tags": {
          "type": "object",
          "additionalProperties": {
            "type": "string"
          },
          "description": "Resource tags."
        }
      },
      "description": "Common resource representation.",
      "x-ms-azure-resource": true,
      "required": [
        "location"
      ]
    }
  },
  "parameters": {
    "SubscriptionIdParameter": {
      "name": "subscriptionId",
      "in": "path",
      "required": true,
      "type": "string",
      "description": "The subscription credentials which uniquely identify the Microsoft Azure subscription. The subscription ID forms part of the URI for every service call."
    },
    "ApiVersionParameter": {
      "name": "api-version",
      "in": "query",
      "required": true,
      "type": "string",
      "description": "Client API version."
    }
  },
  "x-internal-service-name": "Virtual Networks",
  "x-internal-toc-name": "NetworkInterfaces",
  "x-internal-split-type": "Operation"
}
